update local cache dir

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,6 +82,9 @@ jobs:
       - name: Add SBT proxy repositories
         run: cp -vf .github/workflows/repositories /root/.sbt/ ; true
 
+      - name: Create cache dir
+        run: mkdir /tmp/develocity-cache 
+  
       - name: Test
         # DON'T add dist/Universal/stage!
         # Adding dist/Universal/stage bootstraps the compiler
@@ -91,17 +94,11 @@ jobs:
         run: |
           ./project/scripts/sbt "clean ;compile ;test"
           ./project/scripts/cmdTests
-#      - name: Cache Develocity local cache
-#        uses: actions/cache@v4
-#        with:
-#          path: /root/.sbt/1.0/.develocity/build-cache
-#          key: test_non_bootstrapped-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
-#          restore-keys: |
-#            test_non_bootstrapped-${{ github.event.pull_request.number }}-
+
       - name: Ls
-        run: ls -ltR -C /root/.sbt
+        run: ls -ltR -C /tmp/develocity-cache
       - name: Tar local cache
-        run: tar -czf local-cache.tgz -C /root/.sbt/1.0/.develocity/build-cache
+        run: tar -czf local-cache.tgz -C /tmp/develocity-cache
       - name: Upload local cache
         uses: actions/upload-artifact@v4
         with:
@@ -139,6 +136,9 @@ jobs:
       - name: Add SBT proxy repositories
         run: cp -vf .github/workflows/repositories /root/.sbt/ ; true
 
+      - name: Create cache dir
+        run: mkdir /tmp/develocity-cache
+      
       - name: Cmd Tests
         run: |
           ./project/scripts/buildScalaBinary
@@ -156,13 +156,6 @@ jobs:
       - name: Test with Scala 2 library with CC TASTy (fast)
         run: ./project/scripts/sbt ";set ThisBuild/Build.scala2Library := Build.Scala2LibraryCCTasty; scala2-library-cc/compile; scala2-library-cc-tasty/compile; scala3-bootstrapped/testCompilation i3"
 
-#      - name: Cache Develocity local cache
-#        uses: actions/cache@v4
-#        with:
-#          path: /root/.sbt/1.0/.develocity/build-cache
-#          key: test-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
-#          restore-keys: |
-#            test-${{ github.event.pull_request.number }}-
       - name: Tar local cache
         run: tar -czf local-cache.tgz -C /root/.sbt/1.0/.develocity/build-cache
       - name: Upload local cache
@@ -202,21 +195,19 @@ jobs:
       - name: Add SBT proxy repositories
         run: cp -vf .github/workflows/repositories /root/.sbt/ ; true
 
+      - name: Create cache dir
+        run: mkdir /tmp/develocity-cache
+      
       - name: Test with Scala 2 library TASTy
         run: ./project/scripts/sbt ";set ThisBuild/Build.scala2Library := Build.Scala2LibraryTasty ;scala3-bootstrapped/test"
 
       - name: Test with Scala 2 library with CC TASTy
         run: ./project/scripts/sbt ";set ThisBuild/Build.scala2Library := Build.Scala2LibraryCCTasty ;scala3-bootstrapped/test"
 
-#      - name: Cache Develocity local cache
-#        uses: actions/cache@v4
-#        with:
-#          path: /root/.sbt/1.0/.develocity/build-cache
-#          key: test_scala2_library_tasty-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
-#          restore-keys: |
-#            test_scala2_library_tasty-${{ github.event.pull_request.number }}-
+      - name: Ls
+        run: ls -ltR /tmp/develocity-cache
       - name: Tar local cache
-        run: tar -czf local-cache.tgz -C /root/.sbt/1.0/.develocity/build-cache
+        run: tar -czf local-cache.tgz -C /tmp/develocity-cache
       - name: Upload local cache
         uses: actions/upload-artifact@v4
         with:
@@ -255,36 +246,31 @@ jobs:
       - name: Add SBT proxy repositories
         run: cp -vf .github/workflows/repositories /root/.sbt/ ; true
 
+      - name: Create cache dir
+        run: mkdir /tmp/develocity-cache
+      
       - name: MiMa
         run: |
-          mkdir /tmp/.develocity-cache
           ./project/scripts/sbt "clean ;scala3-interfaces/mimaReportBinaryIssues ;scala3-library-bootstrapped/mimaReportBinaryIssues ;scala3-library-bootstrappedJS/mimaReportBinaryIssues; tasty-core-bootstrapped/mimaReportBinaryIssues; scala2-library-bootstrapped/mimaReportBinaryIssues"
-          ls -ltR /
-#      - name: Ls
-#        run: ls -ltR /
-#      - name: Ls
-#        run: ls -ltR /root/.sbt
-#      - name: Tar local cache
-#        run: tar -czf local-cache.tgz -C /root/.sbt/1.0/.develocity/build-cache
-#      - name: Upload local cache
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: local-cache-mima
-#          path: local-cache.tgz
-#          retention-days: 7
+
+      - name: Ls
+        run: ls -ltR /tmp/develocity-cache
 
       - name: TASTy MiMa
         run: |
           # This script cleans the compiler and recompiles it from scratch (keep as last run)
           ./project/scripts/scala2-library-tasty-mima.sh
 
-#      - name: Cache Develocity local cache
-#        uses: actions/cache@v4
-#        with:
-#          path: /root/.sbt/1.0/.develocity/build-cache
-#          key: mima-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
-#          restore-keys: |
-#            mima-${{ github.event.pull_request.number }}-
+      - name: Ls
+        run: ls -ltR /tmp/develocity-cache
+      - name: Tar local cache
+        run: tar -czf local-cache.tgz -C /tmp/develocity-cache
+      - name: Upload local cache
+        uses: actions/upload-artifact@v4
+        with:
+          name: local-cache-mima
+          path: local-cache.tgz
+          retention-days: 7
 
   community_build_a:
     runs-on: ubuntu-latest
@@ -318,6 +304,9 @@ jobs:
       - name: Add SBT proxy repositories
         run: cp -vf .github/workflows/repositories /root/.sbt/ ; true
 
+      - name: Create cache dir
+        run: mkdir /tmp/develocity-cache
+      
       - name: Test
         run: |
           git config --global --add safe.directory $GITHUB_WORKSPACE
@@ -329,15 +318,10 @@ jobs:
         if: ${{ always() }}
         run: cat community-build/dotty-community-build-deps || true
 
-#      - name: Cache Develocity local cache
-#        uses: actions/cache@v4
-#        with:
-#          path: /root/.sbt/1.0/.develocity/build-cache
-#          key: community_build_a-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
-#          restore-keys: |
-#            community_build_a-${{ github.event.pull_request.number }}-
+      - name: Ls
+        run: ls -ltR /tmp/develocity-cache
       - name: Tar local cache
-        run: tar -czf local-cache.tgz -C /root/.sbt/1.0/.develocity/build-cache
+        run: tar -czf local-cache.tgz -C /tmp/develocity-cache
       - name: Upload local cache
         uses: actions/upload-artifact@v4
         with:
@@ -377,6 +361,9 @@ jobs:
       - name: Add SBT proxy repositories
         run: cp -vf .github/workflows/repositories /root/.sbt/ ; true
 
+      - name: Create cache dir
+        run: mkdir /tmp/develocity-cache
+      
       - name: Test
         run: |
           git config --global --add safe.directory $GITHUB_WORKSPACE
@@ -388,15 +375,10 @@ jobs:
         if: ${{ always() }}
         run: cat community-build/dotty-community-build-deps || true
 
-#      - name: Cache Develocity local cache
-#        uses: actions/cache@v4
-#        with:
-#          path: /root/.sbt/1.0/.develocity/build-cache
-#          key: community_build_b-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
-#          restore-keys: |
-#            community_build_b-${{ github.event.pull_request.number }}-
+      - name: Ls
+        run: ls -ltR /tmp/develocity-cache
       - name: Tar local cache
-        run: tar -czf local-cache.tgz -C /root/.sbt/1.0/.develocity/build-cache
+        run: tar -czf local-cache.tgz -C /tmp/develocity-cache
       - name: Upload local cache
         uses: actions/upload-artifact@v4
         with:
@@ -436,6 +418,9 @@ jobs:
       - name: Add SBT proxy repositories
         run: cp -vf .github/workflows/repositories /root/.sbt/ ; true
 
+      - name: Create cache dir
+        run: mkdir /tmp/develocity-cache
+      
       - name: Test
         run: |
           git config --global --add safe.directory $GITHUB_WORKSPACE
@@ -447,15 +432,10 @@ jobs:
         if: ${{ always() }}
         run: cat community-build/dotty-community-build-deps || true
 
-#      - name: Cache Develocity local cache
-#        uses: actions/cache@v4
-#        with:
-#          path: /root/.sbt/1.0/.develocity/build-cache
-#          key: community_build_c-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
-#          restore-keys: |
-#            community_build_c-${{ github.event.pull_request.number }}-
+      - name: Ls
+        run: ls -ltR /tmp/develocity-cache
       - name: Tar local cache
-        run: tar -czf local-cache.tgz -C /root/.sbt/1.0/.develocity/build-cache
+        run: tar -czf local-cache.tgz -C /tmp/develocity-cache
       - name: Upload local cache
         uses: actions/upload-artifact@v4
         with:
@@ -493,18 +473,16 @@ jobs:
       - name: Add SBT proxy repositories
         run: cp -vf .github/workflows/repositories /root/.sbt/ ; true
 
+      - name: Create cache dir
+        run: mkdir /tmp/develocity-cache
+      
       - name: Test sbt
         run: ./project/scripts/sbt "sbt-test/scripted; sbt-community-build/scripted"
 
-#      - name: Cache Develocity local cache
-#        uses: actions/cache@v4
-#        with:
-#          path: /root/.sbt/1.0/.develocity/build-cache
-#          key: test_sbt-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
-#          restore-keys: |
-#            test_sbt-${{ github.event.pull_request.number }}-
+      - name: Ls
+        run: ls -ltR /tmp/develocity-cache
       - name: Tar local cache
-        run: tar -czf local-cache.tgz -C /root/.sbt/1.0/.develocity/build-cache
+        run: tar -czf local-cache.tgz -C /tmp/develocity-cache
       - name: Upload local cache
         uses: actions/upload-artifact@v4
         with:
@@ -546,6 +524,9 @@ jobs:
       - name: Add SBT proxy repositories
         run: cp -vf .github/workflows/repositories /root/.sbt/ ; true
 
+      - name: Create cache dir
+        run: mkdir /tmp/develocity-cache
+      
       - name: Test
         run: |
           ./project/scripts/buildScalaBinary
@@ -557,16 +538,10 @@ jobs:
         run: |
           ./project/scripts/sbt ";sjsSandbox/run ;sjsSandbox/test ;sjsJUnitTests/test ;set sjsJUnitTests/scalaJSLinkerConfig ~= switchToESModules ;sjsJUnitTests/test ;sjsCompilerTests/test"
 
-#      - name: Cache Develocity local cache
-#        uses: actions/cache@v4
-#        with:
-#          path: /root/.sbt/1.0/.develocity/build-cache
-#          key: test_java8-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
-#          restore-keys: |
-#            test_java8-${{ github.event.pull_request.number }}-
-
+      - name: Ls
+        run: ls -ltR /tmp/develocity-cache
       - name: Tar local cache
-        run: tar -czf local-cache.tgz -C /root/.sbt/1.0/.develocity/build-cache
+        run: tar -czf local-cache.tgz -C /tmp/develocity-cache
       - name: Upload local cache
         uses: actions/upload-artifact@v4
         with:
